# teamb-platform-connectivity

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.sh  connect01.cfg  connect01_tree.h
.github/workflows/: build-control.yml  build-platform.yml  build-selective.yml  connectivity-ci.yml  tdd-build.yml
APP/: CMakeLists.txt
APP/base/: main.c
APP/connect/: app.c  app.h
APP/connect/hal/: hal_comms.c  hal_comms.h
APP/core/: CMakeLists.txt
APP/core/connectivity/: CMakeLists.txt
APP/docs/highLevelDiagrams/firmwareArchitectureDiagram/: connectivityBoardFirmwareArchitectureDiagram.uxf
APP/heatctrl/: app.c
APP/projects/: CMakeLists.txt
APP/projects/connectivity/: CMakeLists.txt  app.c  toolchain.cmake
APP/projects/connectivity/CA7/: CMakeLists.txt  main.c
APP/projects/connectivity/CA7/mqtt/: CMakeLists.txt
APP/projects/connectivity/CA7/wifi/: wifi.h
APP/projects/connectivity/CM4/: CMakeLists.txt  main.c
APP/projects/connectivity/common/: CMakeLists.txt  comms.h  comms_handler.c  comms_input.c  comms_msgs.h
APP/projects/connectivity/core/: comms_handler.c  comms_msgs.h
APP/projects/connectivity/hal/: hal_comms.c  hal_comms.h
APP/projects/controlBoard/: CMakeLists.txt
APP/projects/oilMs/: app.c
BSP/: CMakeLists.txt
BSP/stm32/: CMakeLists.txt  syscalls.c
BSP/stm32/stm32mp1/: system_stm32mp1xx.c
BSP/stm32/stm32mp1/CA7/: startup.s
BSP/stm32/stm32mp1/CM4/: STM32MP15_CM4.ld  startup_stm32mp15xx.s
CFG/: connect01.cfg  connect01.sh
DOCS/highLevelDiagrams/firmwareArchitectureDiagram/: controlBoardFirmwareArchitectureDiagram.uxf
EXAMPLE_APP/lib_teamb_handshake/: CMakeLists.txt  handshake_prints.c  handshake_prints.h  main.c
TDD/: Makefile
TDD/can/: Makefile  can_test.cpp
TDD/cpputest/: Makefile.in  config.status  libtool
TDD/cpputest/autom4te.cache/: requests  traces.0  traces.1
TDD/cpputest/src/CppUTest/.deps/: lib_libCppUTest_a-CommandLineTestRunner.Po  lib_libCppUTest_a-JUnitTestOutput.Po  lib_libCppUTest_a-MemoryLeakDetector.Po  lib_libCppUTest_a-SimpleMutex.Po  lib_libCppUTest_a-TestFilter.Po  lib_libCppUTest_a-TestHarness_c.Po  lib_libCppUTest_a-TestMemoryAllocator.Po  lib_libCppUTest_a-TestOutput.Po  lib_libCppUTest_a-TestRegistry.Po  lib_libCppUTest_a-TestResult.Po
TDD/cpputest/src/CppUTestExt/.deps/: lib_libCppUTestExt_a-CodeMemoryReportFormatter.Po  lib_libCppUTestExt_a-IEEE754ExceptionsPlugin.Po  lib_libCppUTestExt_a-MemoryReportAllocator.Po  lib_libCppUTestExt_a-MemoryReporterPlugin.Po  lib_libCppUTestExt_a-MockActualCall.Po  lib_libCppUTestExt_a-MockExpectedCallsList.Po  lib_libCppUTestExt_a-MockSupport.Po
TDD/lib_1wire/: Makefile  test.cpp
TDD/lib_teamb_handshake/: Makefile
TESTS/: Run_AllTest.sh
TESTS/APP/projects/connectivity/common/: comms_handler.c
TESTS/cpputest/: Makefile  config.h.in~  configure
TESTS/cpputest/autom4te.cache/: output.2
TESTS/cpputest/src/CppUTest/.deps/: lib_libCppUTest_a-TeamCityTestOutput.Po  lib_libCppUTest_a-TestPlugin.Po
TESTS/cpputest/src/CppUTestExt/.deps/: lib_libCppUTestExt_a-GTest.Po  lib_libCppUTestExt_a-MemoryReportFormatter.Po  lib_libCppUTestExt_a-MockExpectedCall.Po  lib_libCppUTestExt_a-MockNamedValue.Po
TESTS/lib_teamb_handshake/: Makefile
UTIL_DRVR/: CMakeLists.txt
UTIL_DRVR/can/: can.c  can.h
UTIL_DRVR/can/test/: can_testcases.h  main.c
UTIL_DRVR/common/: common.h
UTIL_DRVR/lib_teamb_handshake/: handshake.c  handshake.h
UTIL_DRVR/lib_teamb_handshake/test/: main.c  teamb_handshake.h
UTIL_DRVR/logger/: log.c  log.h
UTIL_DRVR/rs485/: rs485.c  rs485.h
board/linker/ca7/: STM32MP15.ld
board/system/: syscalls.c
project/stm32mp1xx/ca7/: main.c
project/stm32mp1xx/ca7/meta-connectivity/conf/: layer.conf
scripts/: project_script_cfg  run_build.sh  run_cppcheck.sh  run_cpplint.sh  run_docker.sh  run_metrix++.sh  run_test.sh
scripts/cmake/toolchain/ca7/: toolchain_stm32_ca7.cmake
source/APP/projects/connectivity/CM4/: CMakeLists.txt
source/APP/projects/connectivity/common/: CMakeLists.txt  comms.h
source/APP/projects/controlBoard/: CMakeLists.txt
source/APP/projects/oilMs/: CMakeLists.txt
source/BSP/stm32/stm32h7/: STM32H743XI_FLASH.ld
source/BSP/stm32/stm32mp1/CA7/: linkscript.ld
source/BSP/stm32/stm32mp1/CM4/: CMakeLists.txt
source/CUSTOM/ota_update/: CMakeLists.txt
source/app/: CMakeLists.txt
source/app/base/: main.c  main.h
source/app/common/: CMakeLists.txt  comms.h  comms_input.c  comms_output.c  rpmsg_comm.c
source/app/connectivity/: CMakeLists.txt  app.c
source/app/mqtt/: CMakeLists.txt
source/app/projects/: CMakeLists.txt
source/app/projects/connectivity/: CMakeLists.txt  app.c  app.h
source/app/projects/connectivity/CA7/: CMakeLists.txt  main.c
source/app/projects/connectivity/CM4/: CMakeLists.txt  main.c
source/app/projects/connectivity/common/: CMakeLists.txt  comms.h  comms_handler.c  comms_input.c  comms_msgs.h  comms_output.c  rpmsg_comm.c  rpmsg_comm.h
source/app/projects/controlBoard/: CMakeLists.txt
source/app/wifi/: CMakeLists.txt  wifi.c
source/bsp/stm32/: syscalls.c
source/bsp/stm32/stm32h7/: startup_stm32h743xx.S
source/bsp/stm32/stm32mp1/: system_stm32mp1xx.c
source/bsp/stm32/stm32mp1/CA7/: CMakeLists.txt  linkscript.ld  startup.s  toolchain_stm32_ca7.cmake
source/bsp/stm32/stm32mp1/CM4/: STM32MP15_CM4.ld  toolchain_stm32_cm4.cmake
source/cfg/: FreeRTOSConfig.h  connect01_tree.h
source/custom/: CMakeLists.txt
source/custom/dev_status/: app.c
source/custom/log_service/: log.c  log.h
tests/APP/projects/connectivity/: app.c  app.h
tests/APP/projects/connectivity/common/: comms.h  comms_handler.c  comms_input.c  comms_msgs.h  comms_output.c
tests/cpputest/: configure~
tests/cpputest/autom4te.cache/: output.1
tests/cpputest/src/CppUTest/.deps/: lib_libCppUTest_a-CommandLineArguments.Po  lib_libCppUTest_a-MemoryLeakWarningPlugin.Po  lib_libCppUTest_a-SimpleString.Po  lib_libCppUTest_a-SimpleStringInternalCache.Po  lib_libCppUTest_a-TestFailure.Po  lib_libCppUTest_a-TestTestingFixture.Po  (+1 more)
tests/mqtt/: CMakeLists.txt  test.cpp
(+11 files in other folders)
